#312 mobile에서 iScroll 영역 스크롤 속도 줄임, iOS 사파리에서 panel_buttons가 가려지던 버그 해결 Decrease scroll speed on iScroll area, Fix bug doesn't display panel_buttons on iOS Safari

--- a/rollingPuppy/src/main/webapp/stylesheets/mobileMain.css
+++ b/rollingPuppy/src/main/webapp/stylesheets/mobileMain.css
@@ -195,7 +195,7 @@ header {
 /* .scroll_wrapper의 크기는 아래 media query에서 적용함 */
 .scroll_wrapper {
 	position: absolute;
-	top: 10px;
+	top: 0px;
 	bottom: 30px;
 	overflow: hidden;
 }
@@ -210,10 +210,11 @@ header {
 	width: 100%;
 }
 
-.section h1 {
+.scroll_area h1 {
 	color: white;
 	font-size: 3em;
 	font-weight: bold;
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
@@ -261,7 +262,7 @@ and (min-width: 650px) and (max-width: 920px) {
 		width: 310px;
 		height: 70px;
 		margin-left: 3px;
-		margin-bottom: 3px;
+		margin-bottom: 5px;
 	}
 }
 
@@ -275,9 +276,10 @@ and (max-width: 650px)  {
 
 	.card {
 		display: block;
-		width: 100%;
+		left: 10px;
+		right: 10px;
 		height: 70px;
-		margin-bottom: 3px;
+		margin-bottom: 5px;
 	}
 }
 
@@ -341,12 +343,15 @@ and (max-width: 650px)  {
 	to { -moz-transform: translateY(100%); }
 }
 
+/* #panel_buttons와 하위 버튼들인 #fold / #unfold의 위치 속성이 다소 괴랄하게 적용되었는데,
+   이는 iOS에서 unfold 애니메이션 동작 중 #fold가 보이지 않는 버그 때문입니다. */
+/* iScroll을 적용되면서 문제가 발생했습니다. 브라우저 별 z-index 랜더링이 달라서 발생한 문제로 생각됩니다. */
 #panel_buttons {
 	position: absolute;
 	width: 52px;
-	height: 26px;
+	height: 52px;
 	left: 50%;
-	margin-left: -25px;
+	margin-left: -26px;
 	bottom: 0px;
 	z-index: 100;
 }
@@ -371,6 +376,7 @@ and (max-width: 650px)  {
 
 #fold {
 	display: none;
+	bottom: 0px;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 	-webkit-border-top-left-radius: 10px;
@@ -384,7 +390,7 @@ and (max-width: 650px)  {
 
 .unfoldPanel #fold, .unfoldedPanel #fold {
 	display: block;
-}
+} 
 
 .panelFold, .panelUnfold {
 	width: 100%;
